Fix align user tile

--- a/express/public/css/custom.css
+++ b/express/public/css/custom.css
@@ -8,6 +8,11 @@ body{
     padding: 40px;
 }
 
+.tile-container {
+  display: flex;
+  align-items: center;
+}
+
 .id-tile {
   background: gray;
   width: 30px;
